# pyexample

./: pyproject.toml  requirements-dev.txt  requirements.txt
.cloudbees/workflows/: trigger.yml  workflow.yml
.github/workflows/: ci.yml
